BAP-1886: Create DI classes for localization  - renamed state to region  - updated address and name formats  - added unit test for LocaleSettingsProvider

--- a/Resources/translations/messages.en.yml
+++ b/Resources/translations/messages.en.yml
@@ -1,10 +1,10 @@
-oro.locale.address_format.state_name_type.parish: "parish"
-oro.locale.address_format.state_name_type.state: "state"
-oro.locale.address_format.state_name_type.island: "island"
-oro.locale.address_format.state_name_type.county: "county"
-oro.locale.address_format.state_name_type.area: "area"
-oro.locale.address_format.state_name_type.prefecture: "prefecture"
-oro.locale.address_format.state_name_type.do_si: "do_si"
-oro.locale.address_format.state_name_type.department: "department"
-oro.locale.address_format.state_name_type.district: "district"
-oro.locale.address_format.state_name_type.province: "province"
+oro.locale.address_format.region_name_type.parish: "parish"
+oro.locale.address_format.region_name_type.state: "state"
+oro.locale.address_format.region_name_type.island: "island"
+oro.locale.address_format.region_name_type.county: "county"
+oro.locale.address_format.region_name_type.area: "area"
+oro.locale.address_format.region_name_type.prefecture: "prefecture"
+oro.locale.address_format.region_name_type.do_si: "do_si"
+oro.locale.address_format.region_name_type.department: "department"
+oro.locale.address_format.region_name_type.district: "district"
+oro.locale.address_format.region_name_type.province: "province"
