--- a/Resources/translations/messages.en.yml
+++ b/Resources/translations/messages.en.yml
@@ -1,10 +1,22 @@
-oro.locale.address_format.region_name_type.parish: "parish"
-oro.locale.address_format.region_name_type.state: "state"
-oro.locale.address_format.region_name_type.island: "island"
-oro.locale.address_format.region_name_type.county: "county"
-oro.locale.address_format.region_name_type.area: "area"
-oro.locale.address_format.region_name_type.prefecture: "prefecture"
-oro.locale.address_format.region_name_type.do_si: "do_si"
-oro.locale.address_format.region_name_type.department: "department"
-oro.locale.address_format.region_name_type.district: "district"
-oro.locale.address_format.region_name_type.province: "province"
+oro.locale:
+    address_format:
+        region_name_type:
+            parish: "parish"
+            state: "state"
+            island: "island"
+            county: "county"
+            area: "area"
+            prefecture: "prefecture"
+            do_si: "do_si"
+            department: "department"
+            district: "district"
+            province: "province"
+
+    form:
+        tooltip:
+            locale: "Locale option used to change number, address, name and date formats"
+            location: "Location format used when 'Format address by address country' option is disabled"
+            format_address_by_address_country: "When this option is enabled address will be formatted acording to their countries"
+            language: "Language option used to change application language"
+            timezone: "Timezone option used to show dates in correct time zone"
+            currency: "Currency option used as system wide default currency"
