CRM-3268: Use shortened dates (e.g. on emails) for activities.  - Implemented smart date format in javascript.  - Added day date format to format converter.  - Added default day format to locale settings.  - Updated locale settings to pull new day format form converter.  - Updated tests

--- a/Resources/translations/jsmessages.en.yml
+++ b/Resources/translations/jsmessages.en.yml
@@ -4,3 +4,4 @@
 "PM": "PM"
 "Sorry, calendar events were not loaded correctly": "Sorry, calendar events were not loaded correctly"
 "Sorry, calendar event was not saved correctly": "Sorry, calendar event was not saved correctly"
+"Yesterday": "Yesterday"
