CRM-3571: Add new formatters

--- a/Resources/translations/messages.en.yml
+++ b/Resources/translations/messages.en.yml
@@ -39,3 +39,6 @@ oro.locale:
                     miles_per_hour: 'Miles per hour'
                     kilometers_per_hour: 'Kilometers per hour'
                     meters_per_second: 'Meters per second'
+    formatter:
+        datetime:
+            default: N/A
